# Docx2PDF-Convertor-for-my-Dad

./: .gitattributes  .gitignore  BUILD.md  PROJECT_COMPLETE.md  README.md  download-libreoffice.sh  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: libreoffice.rs  main.rs
src/components/: DropZone.tsx  FileList.tsx  ProgressBar.tsx
